Desenvolvimento Seerviços e seção Sobre nós

--- a/index.html
+++ b/index.html
@@ -36,17 +36,50 @@
     <section id="banner">
         <h2>Compre nossos produtos! =)</h2>
     </section>
-    <section id="servico">
+    <section id="servico" class="container mt-5">
         <div class="row">
             <div class="col-4">
-                Serviço 1
+                <div class="card">
+                    <img src="images/criando-sites.png" class="card-img-top" alt="Sites!">
+                    <div class="card-body">
+                      <h5 class="card-title">Sites!</h5>
+                      <p class="card-text">O site do seus sonhos sem ter que por a mão na massa. Estamos protos pra te entregá-lo pra você com tudo o que precisa no minimo de tempo.</p>
+                      <a href="#" class="btn btn-primary">Sim, eu quero!</a>
+                    </div>
+                  </div>                  
             </div>
             <div class="col-4">
-                Serviço 2
+                <div class="card">
+                    <img src="images/ecommerce.png" class="card-img-top" alt="Loja virtual!">
+                    <div class="card-body">
+                      <h5 class="card-title">Lojas vituais!</h5>
+                      <p class="card-text">Quer vender seus produtos e serviços on-line e não sabe por onde começar? Deixa com a gente.</p>
+                      <a href="#" class="btn btn-primary">Sim, eu quero!</a>
+                    </div>
+                  </div>                  
             </div>
             <div class="col-4">
-                Serviço 3
+                <div class="card">
+                    <img src="images/blog.png" class="card-img-top" alt="Blogs!">
+                    <div class="card-body">
+                      <h5 class="card-title">Blogs!</h5>
+                      <p class="card-text">A base de tudo o que se fala on-line. Criamoso seu canal de comunicação com o mundo. Comuniquese com seu público.</p>
+                      <a href="#" class="btn btn-primary">Sim, eu quero!</a>
+                    </div>
+                  </div>                  
             </div>
+        </div>
+    </section>
+    <section id="sobre" class="container mt-5 mb-5">
+        <div class="row border">
+                <div class="col-6">
+                    <img src="images/about.svg" class="img-fluid">
+                </div>
+                <div class="col-6 d-flex justify-content-center flex-column">
+                    <h2>Sobre nós</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima dolore facilis sed voluptatibus aut voluptate nemo, reprehenderit quaerat voluptatum quasi amet odio officiis soluta, eveniet ab quibusdam magnam possimus earum!
+                    </p>
+                </div>
         </div>
     </section>
 </body>
